# narou.rs

./: .gitignore  AGENTS.md  COMMANDS.md  Cargo.toml  Cross.toml  LICENSE  README.md  Third-Party-License.md  WEBUI.md  about.hbs  about.toml  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: porting_status.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
.serena/memories/compatibility/: init_and_dependency_policy.md  yaml_driven_site_definitions.md
.serena/memories/conversion/: kakuyomu_parity_2026-04-09.md  kakuyomu_parity_test_2026-04-19.md
.serena/memories/css/: unit-rule.md
.serena/memories/downloader/: syosetu_org_fetch_2026-04-11.md
.serena/memories/downloader/arcadia/: encoding-note.md
.serena/memories/git/: branching_policy.md
.serena/memories/porting_status/: aozora_cp932_filename_2026-05-30.md  aozora_interrobang_filename_2026-05-27.md  convert_stdin_2026-05-26.md  illustration_dedup_web_state_2026-06-28.md  illustration_hash_store_2026-06-28.md  release_0_2_12_2026-06-28.md  release_0_2_8_2026-05-28.md  site_timezone_2026-04-19.md  title_date_decorate_2026-05-28.md  update_compat_2026-04-12.md  update_last_update_2026-04-19.md  version_2026-04-14.md  web_auto_update_2026-04-19.md  web_settings_2026-04-19.md  web_tag_search_2026-04-19.md
.serena/memories/project_structure/: module_split_2026-04-11.md
docs/: external-projects.md
preset/: custom_chuki_tag.txt  mail_setting.yaml
scripts/: package-release.ps1
src/: backtracer.rs  cli.rs  compat.rs  error.rs  illustration_store.rs  lib.rs  logger.rs  mail.rs  main.rs  output_macros.rs  progress.rs  queue.rs  setting_core.rs  setting_info.rs  tag_colors.rs  termcolor.rs  test_support.rs  title.rs  updater_promote.rs  version.rs
src/commands/: alias.rs  backup.rs  browser.rs  clean.rs  convert.rs  csv.rs  diff.rs  download.rs  folder.rs  help.rs  illust.rs  init.rs  inspect.rs  log.rs  mail.rs  manage.rs  mod.rs  send.rs  setting.rs  trace.rs  update.rs  version.rs  web.rs  web_tray.rs
src/converter/: converter_base.rs  dakuten_font.rs  device.rs  ini.rs  inspector.rs  mod.rs  output.rs  render.rs  settings.rs  user_converter.rs
src/converter/converter_base/: character_conversion.rs  indentation.rs  mod.rs  ruby.rs  stash_rebuild.rs  text_normalization.rs
src/converter/user_converter/: mod.rs  setting_override.rs
src/db/: database.rs  index_store.rs  inventory.rs  mod.rs  novel_record.rs  paths.rs  ruby_time.rs
src/downloader/: fetch.rs  html.rs  info_cache.rs  mod.rs  narou_api.rs  novel_info.rs  persistence.rs  preprocess.pest  preprocess.rs  rate_limit.rs  section.rs  security.rs  site_setting.rs  toc.rs  types.rs  util.rs
src/downloader/preprocess/: ast.rs  interpreter.rs  mod.rs  parser.rs
src/downloader/site_setting/: info_extraction.rs  interpolate.rs  loader.rs  mod.rs  serde_helpers.rs
src/web/: batch.rs  feature_tour.rs  frontend.rs  global_settings.rs  jobs.rs  misc.rs  mod.rs  novel_settings.rs  novels.rs  push.rs  scheduler.rs  sort_state.rs  state.rs  tag_colors.rs  tags.rs  update.rs  worker.rs
src/web/assets/: about.html  author_comments.html  bookmarklet.html  dnd_window.html  edit_menu.html  help.html  index.html  notepad.html  novel_setting.html  rebooting.html  settings.html
src/web/assets/css/: base.css  components.css  layout.css  responsive.css  settings.css  theme.css
src/web/assets/js/: main.js  settings.js
src/web/assets/js/core/: http.js  state.js
src/web/assets/js/ui/: actions.js  context_menu.js  dropdown.js  feature_tour.js  i18n.js  render.js  shortcuts.js
tests/: convert_parity.rs  mail_e2e.rs
webnovel/: kakuyomu.jp.yaml  ncode.syosetu.com.yaml  novel18.syosetu.com.yaml  syosetu.org.yaml  www.akatsuki-novels.com.yaml  www.mai-net.net.yaml
