[package]
name = "narou_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "blocking", "native-tls"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
askama = "0.12"
clap = { version = "4", features = ["derive"] }
open = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
pest = "2.8"
pest_derive = "2.8"
ua_generator = { git = "https://github.com/spider-rs/ua_generator.git", version = "0.5" }
curl = "0.4"
indicatif = "0.18"
encoding_rs = "0.8"
zip = "8.5"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
unicode-normalization = "0.1"
similar = "3.1"
tempfile = "3.27"
shell-words = "1.1"
csv = "1.4"
ctrlc = "3.5"
fancy-regex = "0.17"
socket2 = "0.6"

[build-dependencies]
base64 = "0.22"
sha3 = "0.11"
