[package]
name = "narou_rs"
version = "0.11.1-beta"
edition = "2024"
license = "BSD-2-Clause"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "blocking", "native-tls", "native-tls-vendored"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
askama = "0.12"
clap = { version = "4", features = ["derive"] }
open = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
pest = "2.8"
pest_derive = "2.8"
ua_generator = { git = "https://github.com/spider-rs/ua_generator.git", version = "0.5" }
curl = { version = "0.4", features = ["static-ssl"] }
indicatif = "0.18"
encoding_rs = "0.8"
zip = "8.5"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
unicode-normalization = "0.1"
similar = "3.1"
tempfile = "3.27"
shell-words = "1.1"
csv = "1.4"
ctrlc = "3.5"
fancy-regex = "0.17"
socket2 = "0.6"
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
subtle = "2.6.1"
getrandom = "0.4.2"
fs2 = "0.4.3"

[build-dependencies]
base64 = "0.22"
sha3 = "0.11"

[target."cfg(windows)".dependencies]
tray-icon = "0.22"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
